--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-motion-drawer": "^3.1.0",
+    "react-scripts": "3.0.1",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.0.0"
   }
 }
